export enum OrderStatus {
  OrderCancelled,
  OrderProblem,
  OrderDelivered,
  OrderReturned,
  OrderPaymentDue,
  OrderInTransit,
  OrderProcessing,
  OrderPickupAvailable,
}
